# vernacular

./: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/vernacular/: __init__.py  i18nstr.py  store.py  translate.py  utils.py
src/vernacular/locales/fr/LC_MESSAGES/: test.po
src/vernacular/locales/fr_CA/LC_MESSAGES/: test.po
tests/: test_i18n.py
